# receiptgo

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs  ringgo.rs
src/cli/: mod.rs
src/ringgo/: authentication.rs  downloads.rs  mod.rs  parking_sessions.rs  url_helpers.rs
src/ringgo/errors/: mod.rs
tests/: integration_test.rs
