[package]
name = "receiptgo"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Elver <jordan@elver.me"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.8"
